clusters/takeout/apps/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
spec:
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser
        volumeMounts:
          - name: braavos
            mountPath: /srv/braavos
          - name: deluge-downloads
            mountPath: /srv/downloads
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "32Mi"
        ports:
        - containerPort: 80
      volumes:
        - name: braavos
          persistentVolumeClaim:
            claimName: braavos-media-pvc
        - name: deluge-downloads
          persistentVolumeClaim:
            claimName: deluge-downloads
