clusters/takeout/apps/filebrowser/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: filebrowser
spec:
  serviceName: filebrowser
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/instance
                operator: In
                values:
                - default-qbittorrent
            topologyKey: kubernetes.io/hostname
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:v2
        command:
        - sh
        - -c
        - |
          apk add mktorrent && /filebrowser -d /db/database.db
        volumeMounts:
          - name: filebrowser-config
            mountPath: /db
          - name: braavos
            mountPath: /srv/braavos
          - name: downloads
            mountPath: /srv/downloads
          - name: amazon-kubernetes-storage
            mountPath: /srv/amazon-kubernetes-storage
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "256Mi"
        ports:
        - containerPort: 80
      volumes:
        - name: braavos
          persistentVolumeClaim:
            claimName: braavos-media-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: amazon-kubernetes-storage
          persistentVolumeClaim:
            claimName: amazon-kubernetes-storage
      nodeSelector:
        longhorn: primary
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: filebrowser-config
      spec:
        resources:
          requests:
            storage: 512Mi
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
